# stand-up-reminder

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: stand-up-reminder-autostart.desktop  stand-up-reminder-launcher  stand-up-reminder.desktop  stand-up-reminder.service
docs/superpowers/plans/: 2026-07-20-break-snooze-skip.md  2026-07-20-github-publication-release.md  2026-07-20-long-break-return-reset.md  2026-07-20-persistent-break-return-flow.md  2026-07-20-stand-up-reminder.md
docs/superpowers/specs/: 2026-07-20-break-snooze-skip-design.md  2026-07-20-github-publication-design.md  2026-07-20-stand-up-reminder-design.md
po/: fr.po  stand-up-reminder.pot
scripts/: build-deb.sh  install.sh  run-tests.sh  uninstall.sh  update-translations.sh
stand_up_reminder/: __init__.py  __main__.py  application.py  i18n.py  scheduler.py  settings.py  stats.py
tests/: __init__.py  test_application_helpers.py  test_install_assets.py  test_publication_docs.py  test_scheduler.py  test_settings.py  test_stats.py
